Add more example views

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,10 @@
   <% include ../partials/head %>
 
   <body>
-    <div id="content"></div>
+
+    <% include ../partials/header %>
+    <% include ../partials/main %>
+
   </body>
 
 </html>
