--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Travelway</title>
-  <link rel="stylesheet" href="/css/main.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="/css/main.css">
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/jquery.js"></script>
 </head>
