--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300,300italic,400italic,600italic,700italic);
 
 body {
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   min-height: 100%;
+}
 
-  font-family: 'Open Sans', sans-serif;
+img {
+  border: 0;
+  height: auto;
+  max-width: 100%;
 }
 
 .light-green {
@@ -30,4 +35,14 @@ body {
 }
 .dark-grey {
     color:#333;
+}
+
+.offscreen {
+  border: 0;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
