--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
 <div class="header" role="banner">
-  <h1>Travelway</h1>
+  <img src="/images/logo.png" alt="">
+  <h1 class="offscreen">Travelway</h1>
 </div>
