--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300,300italic,400italic,600italic,700italic);
 
 body {
+  color: #333;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   min-height: 100%;
@@ -13,6 +14,16 @@ img {
   border: 0;
   height: auto;
   max-width: 100%;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  font-size: inherit;
 }
 
 /**
@@ -35,28 +46,40 @@ img {
 
 /* Colors */
 .light-green {
-    color:#a9cf54;
+  color: #a9cf54;
 }
 .dark-green {
-    color:#588f27;
+  color: #588f27;
 }
 .light-blue {
-    color:#3399cc;
+  color: #3399cc;
 }
 .dark-blue {
-    color:#2980b9;
+  color: #2980b9;
 }
 .light-red {
-    color:#ff6666;
+  color: #ff6666;
 }
 .dark-red {
-    color:#e74c3c;
+  color: #e74c3c;
 }
 .light-grey {
-    color:#ecf0f1;
+  color: #ecf0f1;
 }
 .dark-grey {
-    color:#333;
+  color: #333;
+}
+
+/* Buttons */
+.btn {
+  background: #a9cf54;
+  border-radius: 2px;
+  border-bottom: 1px solid #588f27;
+  color: inherit;
+  display: inline-block;
+  padding: .5rem .75rem;
+  text-decoration: none;
+  margin-bottom: .5rem;
 }
 
 /**
