--- a/views/partials/main.ejs
+++ b/views/partials/main.ejs
@@ -1,3 +1,7 @@
 <main class="main" role="main">
-  <p>Lorem ipsum sholabaloo.</p>
+  <p>Choose your destiny:</p>
+  <ul class="destination">
+    <li><a class="btn" href="/app">The app</a></li>
+    <li><a class="btn" href="/admin">Admin interface</a></li>
+  </ul>
 </main>
