Reorganize templating directory structure

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,8 @@
 
   <body>
 
-    <% include ../partials/header %>
-    <% include ../partials/main %>
+    <% include ../partials/index/header %>
+    <% include ../partials/index/main %>
 
   </body>
 
