--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,8 @@
 body {
   color: #333;
   font-family: 'Open Sans', sans-serif;
-  margin: 0;
+  margin: auto;
+  width: 800px;
   min-height: 100%;
 }
 
@@ -22,6 +23,11 @@ ul {
   padding: 0;
 }
 
+.destination li {
+  float: left;
+  margin-left: 50px;
+}
+
 button {
   font-size: inherit;
 }
@@ -38,6 +44,8 @@ button {
  */
 [role="main"] {
   padding: 0 1rem;
+  margin: auto;
+  width: 600px;
 }
 
 /**
@@ -80,6 +88,7 @@ button {
   padding: .5rem .75rem;
   text-decoration: none;
   margin-bottom: .5rem;
+  font-size: 32px;
 }
 
 /**
