Fix Anders crap

--- a/views/partials/admin/main.ejs
+++ b/views/partials/admin/main.ejs
@@ -1,1 +1,10 @@
-<p>Hi</p>
+<h2>Administration</h2>
+
+<div class="trips">
+  <ul>
+    <li>Trip 1</li>
+    <li>Trip 2</li>
+    <li>Trip 3</li>
+  </ul>
+  <button>New trip</button>
+</div>
