--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,9 +3,6 @@
 body {
   color: #333;
   font-family: 'Open Sans', sans-serif;
-  margin: auto;
-  width: 800px;
-  min-height: 100%;
 }
 
 /**
@@ -21,11 +18,6 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.destination li {
-  float: left;
-  margin-left: 50px;
 }
 
 button {
@@ -44,8 +36,19 @@ button {
  */
 [role="main"] {
   padding: 0 1rem;
-  margin: auto;
-  width: 600px;
+  text-align: center;
+}
+
+/* Destination */
+.destination {
+  display: flex;
+  align-items: center;
+  font-size: 1.25rem;
+  justify-content: center;
+}
+
+.destination a:first-child {
+  margin-right: 1rem;
 }
 
 /**
@@ -88,7 +91,6 @@ button {
   padding: .5rem .75rem;
   text-decoration: none;
   margin-bottom: .5rem;
-  font-size: 32px;
 }
 
 /**
