Add missing stuff to admin page

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1,2 +1,11 @@
-<% include ../partials/admin/header %>
-<% include ../partials/admin/main %>
+<html lang="en">
+
+  <% include ../partials/head %>
+
+<body>
+
+  <% include ../partials/admin/header %>
+  <% include ../partials/admin/main %>
+
+</body>
+</html>
