Add app header and empty views

--- a/views/pages/app.ejs
+++ b/views/pages/app.ejs
@@ -1,4 +1,14 @@
-<% include ../partials/app/header %>
+<!DOCTYPE html>
+<html lang="en">
 
+  <% include ../partials/head %>
 
-<h2>app.ejs</h2>
+  <body class="app">
+
+    <% include ../partials/app/header %>
+    <% include ../partials/app/event_list %>
+    <% include ../partials/app/add_event %>
+
+  </body>
+
+</html>
