Update styles in index

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -2,7 +2,7 @@
 
   <% include ../partials/head %>
 
-<body>
+<body class="admin">
 
   <% include ../partials/admin/header %>
   <% include ../partials/admin/main %>
