--- a/views/partials/admin/main.ejs
+++ b/views/partials/admin/main.ejs
@@ -1,10 +1,14 @@
-<h2>Administration</h2>
+<main class="main" role="main">
 
-<div class="trips">
-  <ul>
-    <li>Trip 1</li>
-    <li>Trip 2</li>
-    <li>Trip 3</li>
-  </ul>
-  <button>New trip</button>
-</div>
+  <form>
+
+    <ul class="travel-list">
+      <li>Trip 1</li>
+      <li>Trip 2</li>
+      <li>Trip 3</li>
+    </ul>
+    <button>New trip</button>
+
+  </form>
+
+</main>
