--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,1 +1,9 @@
-﻿
+﻿.admin h1 {
+  background: #a9cf54;
+  margin-bottom: 1rem;
+  padding: .25rem .5rem;
+}
+
+.admin form {
+  padding: 0 1rem;
+}
