--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
 body {
   color: #333;
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
 }
 
 /**
@@ -36,19 +37,6 @@ button {
  */
 [role="main"] {
   padding: 0 1rem;
-  text-align: center;
-}
-
-/* Destination */
-.destination {
-  display: flex;
-  align-items: center;
-  font-size: 1.25rem;
-  justify-content: center;
-}
-
-.destination a:first-child {
-  margin-right: 1rem;
 }
 
 /**
