--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 
   <% include ../partials/head %>
 
-  <body>
+  <body class="index">
 
     <% include ../partials/index/header %>
     <% include ../partials/index/main %>
