--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Travelway</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/index.css">
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="stylesheet" href="/css/app.css">
   <link rel="icon" type="image/png" href="/images/favicon.png">
