--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -1,1 +1,10 @@
-﻿
+﻿<h2>Add event</h2>
+<div class="input-wrap">
+	<input type="text" value="Toledo" />
+	<input type="text" value="18:00" />
+	<input type="text" value="" placeholder="What" />
+
+	<div class="btn-wrap">
+
+	</div>
+</div>
