--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,4 +10,5 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/jquery.js"></script>
+  <script src="/js/main.js"></script>
 </head>
