--- a/public/css/main.css
+++ b/public/css/main.css
@@ -70,6 +70,24 @@ button {
   color: #333;
 }
 
+input[type="text"] {
+    text-align:left;
+    padding: .5rem .75rem;
+    text-decoration: none;
+    margin-bottom: .5rem;
+    border-radius:4px;
+    width:100%;
+    box-sizing:border-box;
+    display:block;
+    border:1px solid #ccc;
+}
+input[type="text"]:focus {
+    border-color: #66AFE9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
+
 /* Buttons */
 .btn {
   background: #a9cf54;
