--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -1,10 +1,13 @@
-﻿<h2>Add event</h2>
-<div class="input-wrap">
-	<input type="text" value="Toledo" />
-	<input type="text" value="18:00" />
-	<input type="text" value="" placeholder="What" />
+﻿<div id="add-event">
+	<h2>Add event</h2>
+	<div class="input-wrap">
+		<input type="text" value="Toledo" />
+		<input type="text" value="18:00" />
+		<input type="text" value="" placeholder="What" />
 
-	<div class="btn-wrap">
-
-	</div>
+		<div class="btn-wrap">
+			<div class="btn">Cancel</div>
+			<div class="btn">Publish</div>
+		</div>
+	</div
 </div>
