Add btn cancel styling and more add event

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,6 +99,10 @@ input[type="text"]:focus {
   text-decoration: none;
   margin-bottom: .5rem;
 }
+.btn.cancel {
+    background:#ecf0f1;
+    border-bottom-color:#d2d5d6;
+}
 
 /**
  * Utilities
