--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -4,10 +4,10 @@
 		<input type="text" value="Toledo" />
 		<input type="text" value="18:00" />
 		<input type="text" value="" placeholder="What" />
+	</div>
 
-		<div class="btn-wrap">
-			<div class="btn">Cancel</div>
-			<div class="btn">Publish</div>
-		</div>
-	</div
+	<div class="btn-wrap">
+		<div class="btn cancel">Cancel</div>
+		<div class="btn confirm">Publish</div>
+	</div>
 </div>
