Change portal text

--- a/views/partials/index/main.ejs
+++ b/views/partials/index/main.ejs
@@ -1,5 +1,5 @@
 <main class="main" role="main">
-  <h2>Choose your destiny</h2>
+  <h2>Pick a destination</h2>
   <div class="destination">
     <a class="btn" href="/app">The app</a>
     <a class="btn" href="/admin">Admin interface</a>
