--- a/views/pages/app.ejs
+++ b/views/pages/app.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../partials/head %>
+  
+  <link rel="stylesheet" href="/css/app.css">
 
   <body class="app">
 
