Added companies to ui

--- a/views/partials/admin/main.ejs
+++ b/views/partials/admin/main.ejs
@@ -6,7 +6,7 @@
     <select>
       <option disabled selected>Select a company</option>
       <% companies.forEach(function (company) { %>
-      <option value="<%= company.id %>"><%= company.name %></option>
+      <option value="<%= company.id %>"><%= company.companyName %></option>
       <% }); %>
     </select>
 
