Added photo button

--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -4,6 +4,7 @@
 		<input type="text" value="Toledo" />
 		<input type="text" value="18:00" />
 		<input type="text" value="" placeholder="What" />
+		<input class="btn" type="file" value="" placeholder="Photo" />
 	</div>
 
 	<div class="btn-wrap">
