--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,13 @@
-﻿header {
+﻿html, body {
+    height:100%;
+}
+body {
+    display:flex;
+    flex-direction:column;
+}
+
+header {
+    flex-shrink:0;
     background: #ecf0f1;
 }
 header img {
@@ -18,6 +27,10 @@ header ul li a {
     color:#fff;
 }
 
+header + div {
+    flex-grow:1;
+}
+
 h1, h2, h3, h4, p  {
     margin:0;
 }
@@ -29,7 +42,12 @@ h1, h2, h3, h4, p  {
 
 #add-event {
     text-align:center;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: space-between;
 }
+
 #add-event .input-wrap {
     padding:10px;
 }
