--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,6 +25,7 @@ header ul li {
 }
 header ul li a {
     color:#fff;
+    text-decoration:none;
 }
 
 header + div {
@@ -35,10 +36,7 @@ h1, h2, h3, h4, p  {
     margin:0;
 }
 
-.btn {
-    width:120px;
-    margin-bottom:0;
-}
+
 
 #add-event {
     text-align:center;
@@ -47,7 +45,9 @@ h1, h2, h3, h4, p  {
     flex-grow: 1;
     justify-content: space-between;
 }
-
+#add-event h1 {
+    padding:20px 0;
+}
 #add-event .input-wrap {
     padding:10px;
 }
@@ -57,8 +57,25 @@ h1, h2, h3, h4, p  {
     background:#333;
     padding:1rem 0;
 }
-.btn-wrap .btn:first-child {
-    
+.btn-wrap .btn {
+    width:120px;
+    margin-bottom:0;
 }
-.btn-wrap .btn:last-child {
+
+.add-file {
+    position:relative;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+}
+.add-file i {
+    margin-right: 0.5rem;
+}
+.add-file input {
+    position:absolute;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    opacity:0;
 }
