Fetch company trips

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -2,10 +2,12 @@
 
   <% include ../partials/head %>
 
-<body class="admin">
+  <body class="admin">
 
-  <% include ../partials/admin/header %>
-  <% include ../partials/admin/main %>
+    <% include ../partials/admin/header %>
+    <% include ../partials/admin/main %>
 
-</body>
+    <script src="/js/admin.js"></script>
+
+  </body>
 </html>
