--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -1,4 +1,4 @@
-﻿<form type="post" action="travel-events" id="add-event">
+﻿<form method="post" action="/travel-events" id="add-event" enctype="multipart/form-data">
 	<h1>Add event</h1>
 	<div class="input-wrap">
 		<input type="text" value="Toledo" />
@@ -10,10 +10,10 @@
 			Upload photo
 			<input type="file" value="" />
 		</div>
-		
+
 	</div>
 
-	<div class="btn-wrap">			
+	<div class="btn-wrap">
 		<div class="btn cancel">Cancel</div>
 		<input class="btn confirm" type="submit" value="Publish" />
 	</div>
