Started with event_list

--- a/views/partials/app/event_list.ejs
+++ b/views/partials/app/event_list.ejs
@@ -1,1 +1,7 @@
-﻿
+﻿<ul>
+<% events.forEach(function (event) { %>
+    <li><%= event.companyName %>"><%= event.companyName %></li>
+    <% }); %>
+</ul>
+
+
