--- a/views/partials/admin/main.ejs
+++ b/views/partials/admin/main.ejs
@@ -1,14 +1,26 @@
 <main class="main" role="main">
 
-  <form class="select-company">
-
+  <div class="select-company">
     <select>
       <option disabled selected>Select a company</option>
       <% companies.forEach(function (company) { %>
       <option value="<%= company.companyName %>"><%= company.companyName %></option>
       <% }); %>
     </select>
+  </div>
 
-  </form>
+  <div class="travel-list">
+    <ul></ul>
+    <button type="submit" class="btn" disabled>Add trip</button>
+  </div>
 
 </main>
+
+<div class="overlay">
+  <div class="overlay-inner">
+    <label>
+      <p>Add new trip</p>
+      <input type="text" placeholder="Name">
+    </label>
+  </div>
+</div>
