--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -1,4 +1,4 @@
-﻿<form type="post" action="travel-events" id="add-event">
+﻿<form type="post" action="travel-events" id="add-event" class="page" data-page="add-event">
 	<h1>Add event</h1>
 	<div class="input-wrap">
 		<input type="text" value="Toledo" />
