--- a/views/partials/app/event_list.ejs
+++ b/views/partials/app/event_list.ejs
@@ -1,1 +1,7 @@
-﻿
+﻿<div class="page show" data-page="events">
+	event list
+	
+	<a id="add-event-btn" href="#add-event">
+		<i class="fa fa-plus-circle fa-3x"></i>
+	</a>
+</div>
