--- a/views/partials/app/header.ejs
+++ b/views/partials/app/header.ejs
@@ -3,13 +3,13 @@
   <img src="/images/logo.png" alt="" />
   <ul>
     <li>
-      <a href="">Upcoming</a>
+      <a href="#events">Events</a>
     </li>
     <li>
-      <a href="">People</a>
+      <a href="#map">Map</a>
     </li>
     <li>
-      <a href="">Information</a>
+      <a href="#information">Information</a>
     </li>
   </ul>
 </header>
