--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -15,7 +15,7 @@ enctype="multipart/form-data">
 	</div>
 
 	<div class="btn-wrap">
-		<div class="btn cancel">Cancel</div>
+		<a href="#events" class="btn cancel">Cancel</a>
 		<input class="btn confirm" type="submit" value="Publish" />
 	</div>
 </form>
