--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -8,10 +8,25 @@
   margin-bottom: 1rem;
 }
 
+/**
+ * Travel list
+ */
 .admin .travel-list {
   margin-bottom: 1rem;
 }
+.admin .travel-list ul {
+  margin-bottom: 1rem;
+}
+.admin .travel-list li {
+  padding: .25rem;
+}
+.admin .travel-list li:nth-child(even) {
+  background: #ecf0f1;
+}
 
+/**
+ * Overlay
+ */
 .admin .overlay {
   align-items: center;
   background: rgba(0, 0, 0, .8);
