Improve transition and set correct active page at load

--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -16,6 +16,9 @@ enctype="multipart/form-data">
 
 	<div class="btn-wrap">
 		<a href="#events" class="btn cancel">Cancel</a>
-		<input class="btn confirm" type="submit" value="Publish" />
+    <div class="btn confirm">
+      Publish
+      <input type="submit" />
+    </div>
 	</div>
 </form>
