--- a/views/partials/app/event_list.ejs
+++ b/views/partials/app/event_list.ejs
@@ -1,4 +1,4 @@
-﻿﻿<div class="page show" data-page="events">
+﻿﻿<div class="page" data-page="events">
 
 	<h1>Event list</h1>	
 	
@@ -9,7 +9,12 @@
 	﻿<ul>
 		<% events.forEach(function (event) { %>
 			<li>
-				
+				<img src=="" />
+				<article>
+					<h3>Test titel</h3>
+					<p>Test user</p>
+				</article>
+				<p class="time">Time</p>
 			</li>
 		<% }); %>
 	</ul>
