--- a/public/css/app.css
+++ b/public/css/app.css
@@ -48,13 +48,17 @@ header ul li a.active {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    opacity:0;
-    transition: all 300ms ease-out;  
+    opacity:0; 
 }
-.page.show {
-    opacity:1;
-    left:0;
+.animate .page {
+    transition: all 300ms ease-out;
+    transition-property:opacity transform;
+}
+.page.active {
+    width:100%;
+    opacity:1;    
     z-index:10;
+    transform:translateX(-100%);
 }
 .page > h1:first-child {
     padding:20px 0;
@@ -69,9 +73,10 @@ h1, h2, h3, h4, p  {
     right:15px;
     bottom:15px;
     display:inline-block;
-    background:#3399cc;
-    color: #FFF;
     text-decoration:none;
+}
+#add-event-btn i {
+    color:#3399cc;
 }
 .btn.secondary:hover {
     background:#45a6d9;
@@ -83,6 +88,17 @@ h1, h2, h3, h4, p  {
 #add-event .input-wrap {
     padding:10px;
 }
+#add-event .btn input {
+    position:absolute;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    opacity:0;
+    display:block;
+    width:100%;
+    flex-grow:1;
+}
 .btn-wrap {
     display:flex;
     justify-content:space-around;
@@ -92,6 +108,7 @@ h1, h2, h3, h4, p  {
 .btn-wrap .btn {
     width:120px;
     margin-bottom:0;
+    position:relative;
 }
 
 .add-file {
@@ -102,15 +119,4 @@ h1, h2, h3, h4, p  {
 }
 .add-file i {
     margin-right: 0.5rem;
-}
-.add-file input {
-    position:absolute;
-    left:0;
-    top:0;
-    right:0;
-    bottom:0;
-    opacity:0;
-    display:block;
-    width:100%;
-    flex-grow:1;
 }
