Started with file upload

--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -2,14 +2,14 @@
 enctype="multipart/form-data">
 	<h1>Add event</h1>
 	<div class="input-wrap">
-		<input type="text" value="Toledo" />
-		<input type="text" value="18:00" />
-		<input type="text" value="" placeholder="What" />
+		<input class="title" type="text" value="Toledo" />
+		<input class="timestamp" type="text" value="18:00" />
+		<input class="text" type="text" value="" placeholder="What" />
 
 		<div class="btn secondary add-file">
 			<i class="fa fa-camera-retro fa-2x"></i>
 			Upload photo
-			<input type="file" value="" />
+			<input class="photo" type="file" value="" />
 		</div>
 
 	</div>
