--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,16 @@
+.index {
+  max-width: 40rem;
+  margin: 0 auto;
+}
+
+.index .header {
+  text-align: center;
+}
+
+.index img {
+  max-width: 20rem;
+}
+
 .index h2 {
   text-align: center;
 }
