--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,7 +1,11 @@
-﻿.admin h1 {
+﻿.admin .header {
   background: #a9cf54;
   margin-bottom: 1rem;
   padding: .25rem .5rem;
+}
+
+.admin .header h1 {
+  margin: 0;
 }
 
 .admin .main > div {
