--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,11 +18,14 @@
 .index .destination {
   align-items: center;
   display: flex;
-  flex-direction: column;
   font-size: 1.25rem;
   justify-content: center;
 }
 
 .index .destination a {
   display: block;
+}
+
+.index .destination a:first-child {
+  margin-right: .5rem;
 }
