Add dummy icon for list

--- a/views/partials/app/event_list.ejs
+++ b/views/partials/app/event_list.ejs
@@ -9,7 +9,8 @@
 	﻿<ul>
 		<li>			
 			<article>
-				<img class="user-icon" src=="" />
+				<img class="user-icon" src="https://randomuser.me/api/portraits/thumb/men/4.jpg" />
+				
 				<div>
 					<h3>Test titel</h3>
 					<p>Test user</p>
