--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -18,7 +18,7 @@ enctype="multipart/form-data">
 		<a href="#events" class="btn cancel">Cancel</a>
     <div class="btn confirm">
       Publish
-      <input type="submit" />
+      <input id='publish' type="submit" />
     </div>
 	</div>
 </form>
