--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -9,7 +9,7 @@ enctype="multipart/form-data">
 		<div class="btn secondary add-file">
 			<i class="fa fa-camera-retro fa-2x"></i>
 			Upload photo
-			<input class="photo" type="file" value="" />
+			<input class="photo-input" type="file" value="" />
 		</div>
 
 	</div>
