--- a/views/partials/admin/main.ejs
+++ b/views/partials/admin/main.ejs
@@ -20,7 +20,7 @@
   <form class="overlay-inner">
     <label>
       <h4>Add trip</h4>
-      <input class="trip-name" type="text" placeholder="Name" required>
+      <input class="trip-name" type="text" placeholder="Name" required autofocus>
     </label>
     <button type="submit" class="btn">Create trip</button>
   </form>
