--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -32,6 +32,25 @@
 }
 
 /**
+ * Add member
+ */
+.admin .members {
+  margin-bottom: 1rem;
+}
+
+.admin .members ul {
+  margin-bottom: 1rem;
+}
+
+.admin .members li {
+  padding: .25rem;
+}
+
+.admin .members li:nth-child(even) {
+  background: #ecf0f1;
+}
+
+/**
  * Overlay
  */
 .admin .overlay {
