Change button tyep

--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -1,4 +1,4 @@
-﻿﻿<form method="post" action="/travel-events" id="add-event" class="page" data-page="add-event" 
+﻿﻿<form method="post" action="/travel-events" id="add-event" class="page" data-page="add-event"
 enctype="multipart/form-data">
 	<h1>Add event</h1>
 	<div class="input-wrap">
@@ -17,8 +17,7 @@ enctype="multipart/form-data">
 	<div class="btn-wrap">
 		<a href="#events" class="btn cancel">Cancel</a>
     <div class="btn confirm">
-      Publish
-      <input id='publish' type="submit" />
+      <button id='publish' type="submit">Publish</button>
     </div>
 	</div>
 </form>
