Go straight to events

--- a/views/partials/index/main.ejs
+++ b/views/partials/index/main.ejs
@@ -1,7 +1,7 @@
 <main class="main" role="main">
   <h2>Pick a destination</h2>
   <div class="destination">
-    <a class="btn" href="/app">The app</a>
+    <a class="btn" href="/app#events">The app</a>
     <a class="btn" href="/admin">Admin interface</a>
   </div>
 </main>
