--- a/views/pages/app.ejs
+++ b/views/pages/app.ejs
@@ -12,6 +12,7 @@
 	<div class="content">
 		<% include ../partials/app/event_list %>
 		<% include ../partials/app/add_event %>
+		<% include ../partials/app/map %>
 	</div>
   </body>
 
