--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,6 +75,13 @@ h1, h2, h3, h4, p  {
     margin:0;
 }
 
+.page.map {
+    justify-content: flex-start;
+}
+.page.map iframe {
+    width:100%;
+}
+
 .event-list {
     justify-content: flex-start;
 }
@@ -109,6 +116,9 @@ h1, h2, h3, h4, p  {
     top:10px;
     right:10px;
     font-size:0.9rem;
+}
+.event-list .photo {
+    width:100%;
 }
 
 #add-event-btn {
