--- a/views/partials/app/add_event.ejs
+++ b/views/partials/app/add_event.ejs
@@ -15,9 +15,7 @@ enctype="multipart/form-data">
 	</div>
 
 	<div class="btn-wrap">
-		<a href="#events" class="btn cancel">Cancel</a>
-    <div class="btn confirm">
-      <button id='publish' type="submit">Publish</button>
-    </div>
+		<a href="#events" class="btn cancel">Cancel</a>    
+    <button class="btn confirm" id='publish' type="submit">Publish</button>    
 	</div>
 </form>
