--- a/views/partials/app/event_list.ejs
+++ b/views/partials/app/event_list.ejs
@@ -1,10 +1,12 @@
-<div class="event-list page" data-page="events">
+﻿<div class="event-list page" data-page="events">
 
-	<h1>Event list</h1>
+	<h1>
+		Event list	
 
-	<a id="add-event-btn" href="#add-event">
-		<i class="fa fa-plus-circle fa-3x"></i>
-	</a>
+		<a id="add-event-btn" href="#add-event">
+			<i class="fa fa-plus-circle fa-3x"></i>
+		</a>
+	</h1>	
 
 	<ul id='event-list'>
       <% events.forEach(function (event) { %>
