--- a/public/css/app.css
+++ b/public/css/app.css
@@ -117,6 +117,7 @@ h1, h2, h3, h4, p  {
     padding:10px;
     position:relative;
     align-items: center;
+    text-align:left;
 }
 .event-list li article p {
     color:#ccc;
@@ -133,10 +134,8 @@ h1, h2, h3, h4, p  {
     margin-right:20px;
 }
 .event-list li .time {
-    position:absolute;
-    top:10px;
-    right:10px;
-    font-size:0.9rem;
+    margin-top: 0;
+    font-size: 0.7rem;
 }
 .event-list .photo {
     width:100%;
