--- a/public/css/app.css
+++ b/public/css/app.css
@@ -42,7 +42,7 @@ header ul li a.active {
 .page {
     position:absolute;
     top:0;
-    left:100%;
+    left:0;
     right:0;
     bottom:0;
     text-align:center;
@@ -50,22 +50,29 @@ header ul li a.active {
     flex-direction: column;
     justify-content: space-between;
     opacity:0;
+    
+    
+    -webkit-transform:scale(0);
+    transform:scale(0);
 }
 .animate .page {
-    transition: all 300ms ease-out;
-    transition-property:opacity transform;
 
     -webkit-transition: all 300ms ease-out;
     -webkit-transition-property:opacity transform;
+
+    transition: all 300ms ease-out;
+    transition-property:opacity transform;
 }
 .page.active {
-    width:100%;
+    
     opacity:1;
     z-index:10;
     overflow-y:auto;
     -webkit-overflow-scrolling: touch;
-    transform:translateX(-100%);
-    -webkit-transform:translateX(-100%);
+
+   
+    -webkit-transform:scale(1);
+     transform:scale(1);
 }
 .page > h1:first-child {
     padding:20px 0;
